@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
 Build-Depends: debhelper (>= 7), autotools-dev
 Standards-Version: 3.8.3
-Homepage: https://code.google.com/p/libnk2/
+Homepage: https://github.com/libyal/libnk2/
 
 Package: libnk2
 Section: libs
