@@ -2,7 +2,7 @@ This work was packaged for Debian by:
 
     Joachim Metz <joachim.metz@gmail.com> on @DPKG_DATE@
 
-It was downloaded from https://code.google.com/p/libnk2/
+It was downloaded from https://github.com/libyal/libnk2/
 
 Upstream Author(s):
 
@@ -10,7 +10,7 @@ Upstream Author(s):
 
 Copyright:
 
-    Copyright (C) 2009-2013, Joachim Metz <joachim.metz@gmail.com>
+    Copyright (C) 2009-2014, Joachim Metz <joachim.metz@gmail.com>
 
 License:
 
@@ -33,7 +33,7 @@ Public License can be found in `/usr/share/common-licenses/LGPL-3'.
 
 The Debian packaging is:
 
-    Copyright (C) 2009-2013, Joachim Metz <joachim.metz@gmail.com>
+    Copyright (C) 2009-2014, Joachim Metz <joachim.metz@gmail.com>
 
 and is licensed under the GNU Lesser General Public License,
 see `/usr/share/common-licenses/LGPL-3'.
