@@ -2,8 +2,8 @@
 name: "libnk2"
 status: "alpha"
 features: [
-    "debug_output", "tests", "tools", "python",
-    "source_package",
+    "debug_output", "tests", "tools",
+    "git", "source_package",
     "cygwin", "gcc", "mingw", "msvscpp",
     "dpkg", "rpm"]
 
@@ -11,10 +11,10 @@ features: [
 url: "https://googledrive.com/host/0B3fBvzttpiiSZFNVS2JjWkNnelk/"
 
 [git]
-url: "https://code.google.com/p/libnk2/"
+url: "https://github.com/libyal/libnk2.git"
 
 [tests]
-features: ["valgrind"]
+features: ["profiles", "valgrind"]
 profiles: ["libnk2", "pynk2", "nk2export", "nk2info"]
 example_filename1: "Outlook.NK2"
 example_filename2: "Outlook1.NK2"
