@@ -156,7 +156,7 @@ To have other code to determine if libnk2 was compiled with libbfio support it d
 
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-https://code.google.com/p/libnk2/
+https://github.com/libyal/libnk2/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
