@@ -64,7 +64,7 @@ Errors, verbose and debug output are printed to stderr when verbose output \-v i
 Verbose and debug output are only printed when enabled at compilation.
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-https://code.google.com/p/libnk2/
+https://github.com/libyal/libnk2/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
